# dify-plugin-sdks

python/: pyproject.toml
python/dify_plugin/core/: plugin_executor.py  plugin_registration.py
python/dify_plugin/core/server/tcp/: request_reader.py
python/dify_plugin/entities/model/: message.py
python/dify_plugin/interfaces/agent/: __init__.py
python/dify_plugin/interfaces/model/: large_language_model.py
python/dify_plugin/interfaces/model/openai_compatible/: speech2text.py
python/dify_plugin/interfaces/tool/: __init__.py
python/dify_plugin/invocations/model/: llm.py
